--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,22 @@
 {
     "name": "hexlet/name",
     "description": "Page analyzer – a site that analyzes specified pages for SEO suitability, similar to PageSpeedInsights.",
+    "autoload": {
+        "psr-4": {
+            "App\\": "src"
+        }
+    },
     "require": {
+        "php" : ">=8.2",
         "wp-cli/php-cli-tools": "^0.11.22",
         "lstrojny/functional-php": "^1.17",
         "slim/slim": "^4.14",
-        "slim/slim-skeleton": "^4.5"
+        "slim/slim-skeleton": "^4.5",
+        "slim/psr7": "^1.5",
+        "slim/http": "^1.2",
+        "slim/php-view": "^3.1",
+        "php-di/php-di": "^6.3",
+        "slim/flash": "^0.4.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.10",
