--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,7 +12,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: 8.2
-      - name: Install
-        run: make install
+      - name: Set-up
+        run: make setup
       - name: Run linter
         run: make lint
