--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "slim/http": "^1.2",
         "slim/php-view": "^3.1",
         "php-di/php-di": "^6.3",
-        "slim/flash": "^0.4.0"
+        "slim/flash": "^0.4.0",
+        "twbs/bootstrap": "5.3.3"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.10",
