--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,21 @@ services:
       - "8080:8080"
     volumes:
       - ".:/app"
-      - "/tmp:/tmp"
+
   postgres:
     image: postgres:11.2-alpine
     volumes:
       - postgres:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: example_user
-      POSTGRES_PASSWORD: example_password
-      POSTGRES_DB: example_db
+      POSTGRES_USER: analyzer_user
+      POSTGRES_PASSWORD: analyzer_password
+      POSTGRES_DB: analyzer_db
     ports:
       - "5432:5432"
+
+  volumes:
+    postgres:
+
+  networks:
+    base:
+      driver: bridge
