--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "slim/php-view": "^3.1",
         "php-di/php-di": "^6.3",
         "slim/flash": "^0.4.0",
-        "twbs/bootstrap": "5.3.3"
+        "twbs/bootstrap": "5.3.3",
+        "nesbot/carbon": "*"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.10",
