--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "php-di/php-di": "^6.3",
         "slim/flash": "^0.4.0",
         "twbs/bootstrap": "5.3.3",
-        "nesbot/carbon": "*"
+        "nesbot/carbon": "^3.7"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.10",
