--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "slim/flash": "^0.4.0",
         "twbs/bootstrap": "5.3.3",
         "nesbot/carbon": "^3.7",
-        "guzzlehttp/guzzle": "^7.0"
+        "guzzlehttp/guzzle": "^7.0",
+        "imangazaliev/didom": "^2.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.10",
