--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "twbs/bootstrap": "5.3.3",
         "nesbot/carbon": "^3.7",
         "guzzlehttp/guzzle": "^7.0",
-        "imangazaliev/didom": "^2.0"
+        "imangazaliev/didom": "^2.0",
+        "vlucas/phpdotenv": "^5.6"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.10",
