--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       - "5432:5432"
     networks:
       - base
+    volumes:
+    - ./docker/postgres/data:/var/lib/postgresql/data
 
 volumes:
   vendor_data:
