moved dockerfile to root

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   web:
     build:
-      context: ./docker/web
+      context: ./
     command: make start
     ports:
       - "8000:8000"
@@ -22,8 +22,9 @@ services:
     networks:
       - base
     volumes:
-      - ./docker/postgres/data:/var/lib/postgresql/data
-
+      - ./docker/postgres/data:/var/lib/postgresql/data  # Для данных
+      - ./var/lib/postgresql/data/postgresql.conf:/etc/postgresql/12/main/postgresql.conf  # Монтируем конфиг
+      - ./var/lib/postgresql/data/pg_hba.conf:/etc/postgresql/12/main/pg_hba.conf  # Монтируем конфиг
 volumes:
   vendor_data:
 
