--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,1 @@
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-DATABASE_URL=
+DATABASE_URL="postgresql://analyzer_user:analyzer_password@postgres:5432/database_9"
