--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       DB_DATABASE: database_9
       DB_USERNAME: analyzer_user
       DB_PASSWORD: analyzer_password
-      DATABASE_URL: postgresql://analyzer_user:analyzer_password@postgres:5432/database_9
+      DATABASE_URL: 'postgresql://analyzer_user:analyzer_password@postgres:5432/database_9'
 
   postgres:
     image: postgres:11.2-alpine
@@ -31,7 +31,7 @@ services:
       - base
     volumes:
       - ./database.sql:/docker-entrypoint-initdb.d/init.sql
-      - postgres_data:/var/lib/postgresql/data  # Исправлено: использование именованного тома
+      - postgres_data:/var/lib/postgresql/data
 
 volumes:
   postgres_data:  # Том для данных PostgreSQL
